<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- the replacement for the actionbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Hide past events -->
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="#22000000">

                <TextView
                    android:id="@+id/past_events_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_past_events_title"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/ic_archive"
                    android:drawablePadding="10dp" />

                <TextView
                    android:id="@+id/past_events_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_past_events_content"
                    style="@style/SettingsContentStyle"
                    android:layout_marginLeft="22dp"
                    android:layout_toLeftOf="@+id/past_events_switch"
                    android:layout_below="@+id/past_events_title" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/past_events_switch"
                    android:layout_below="@+id/past_events_title"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"/>


            </RelativeLayout>

            <!-- Change date format -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                >

                <TextView
                    android:id="@+id/date_format_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_format_title"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="10dp" />

                <Spinner
                    android:id="@+id/date_format_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- About this app -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="#22000000"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/about_icon"
                    android:drawablePadding="10dp" />

                <TextView
                    android:id="@+id/about_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content"
                    style="@style/SettingsContentStyle"
                    android:layout_marginLeft="22dp" />
            </LinearLayout>

            <!-- Version of this app -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/version_icon"
                    android:drawablePadding="10dp" />

                <TextView
                    android:id="@+id/version_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Blabla balblabla"
                    style="@style/SettingsContentStyle"
                    android:layout_marginLeft="22dp" />
            </LinearLayout>

            <!-- Rate the app -->
            <LinearLayout
                android:id="@+id/rate_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="#22000000"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_this_app_title"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/rate_icon"
                    android:drawablePadding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_this_app_content"
                    style="@style/SettingsContentStyle"
                    android:layout_marginLeft="22dp" />
            </LinearLayout>

            <!-- Contact -->
            <LinearLayout
                android:id="@+id/contact_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_title"
                    style="@style/SettingsTitleStyle"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_content"
                    style="@style/SettingsContentStyle"
                    android:layout_marginLeft="22dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>