<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_to_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/updated_pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swipe_to_refresh_text"
                tools:textColor="#ffffff"
                android:textSize="@dimen/font_size_tiny"
                android:fontFamily="Roboto-Medium"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/updated_pass_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="10 ago 2014 13:00"
                android:drawableLeft="@drawable/ic_history"
                android:drawablePadding="3dp"
                tools:textColor="#ffffff"
                android:textSize="@dimen/font_size_normal_small"
                android:fontFamily="Roboto-Light"
                android:layout_below="@+id/updated_pass_title"/>

            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_button_height"
                    android:id="@+id/push_notif_switch"
                    android:text="@string/push_notifications"
                    android:switchPadding="10dp"
                    android:visibility="gone"
                    android:textSize="@dimen/font_size_normal_small"/>

                <Button
                    android:id="@+id/add_event_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_button_height"
                    tools:background="#ccc"
                    android:background="@drawable/button_rounded_corners_bg"
                    android:textSize="@dimen/font_size_normal_small"
                    android:fontFamily="Roboto-Light"
                    android:text="@string/add_event_to_calendar"
                    android:padding="4dp"
                    android:textAllCaps="false"
                    android:gravity="center"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/updated_pass_subtitle"
                android:layout_above="@+id/bottom_layout">

                <fragment
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:cameraZoom="15"
                    map:mapType="normal"
                    map:liteMode="true" />

                <ImageView
                    android:id="@+id/map_foreground_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/inner_rounded_corners_shape"
                    android:scaleType="fitXY"/>
            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>